updated .gitignore add submodules core, deployment and persistence

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,21 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+cert.pem
+key.pem
+ca.pem
+*/bin
+*.log
+.buildpath
+.metadata
+.classpath
+.factorypath
+.settings/
+.project
+*/.springBeans
+*/paho*
+*.pem
+*.iml
+*manifest-with-credentials.yml
+*.pid
+*logging.file_IS_UNDEFINED
