added support of the existing service deployment project in the deployment projects. Now custom service broker implements  the deployment of service instances to a referenced already installed service (e.g. create databeses in an existing MariaDB cluster).
In the service_definitions.yaml this can now be addressed by the EXISTING_SERVICE flag in the platform field.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -102,3 +102,12 @@ openstack:
   log_port:
   cinder:
     az:
+
+#### Existing MySQL Server/Cluster ####
+existing:
+  endpoint:
+    host:
+    port:
+    database:
+    username:
+    password: 
