added existing service + config feature toggle

--- a/manifest-lab.yml
+++ b/manifest-lab.yml
@@ -1,14 +1,14 @@
 ---
-instances: 1
-timeout: 180
-memory: 1024M
-domain:
+inherits: manifest.yml
+
+domain: cf.onevoila.rocks
 applications:
 - name: mysql
   host: mysql
   path: target/ssb-mysql.jar
   buildpack: https://github.com/cloudfoundry/java-buildpack.git
   env:
-    CF_TARGET: 
-    SPRING_PROFILES_ACTIVE: cloud
+    SERVER_PORT: 0
+    CF_TARGET: https://api.cf.onevoila.rocks
+    SPRING_PROFILES_ACTIVE: default,cloud
     JAVA_OPTS: -Djava.security.egd=file:/dev/urandom
