--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>de.evoila.cf.broker</groupId>
 		<artifactId>custom-parent</artifactId>
-		<version>0.1-RC</version>
+		<version>1.1.0</version>
 		<relativePath>../core/custom-parent</relativePath>
 	</parent>
 	<artifactId>cf-service-broker-mysql</artifactId>
@@ -24,22 +24,22 @@
 		<dependency>
 			<groupId>de.evoila.cf.broker</groupId>
 			<artifactId>core</artifactId>
-			<version>0.1-RC</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.evoila.cf.broker</groupId>
 			<artifactId>docker</artifactId>
-			<version>0.1-RC</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.evoila.cf.broker</groupId>
 			<artifactId>openstack</artifactId>
-			<version>0.1-RC</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.evoila.cf.broker</groupId>
 			<artifactId>existing-service</artifactId>
-			<version>0.1-RC</version>
+			<version>1.1.0</version>
 		</dependency>
 		<!-- <dependency>
 			<groupId>de.evoila.cf.broker</groupId>
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>de.evoila.cf.broker</groupId>
 			<artifactId>persistence-mongodb</artifactId>
-			<version>0.1-RC</version>
+			<version>1.1.0</version>
 		</dependency>
 	</dependencies>
 
