--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 
 
     <properties>
-        <core.version>0.1-RC</core.version>
-        <deployment.version>0.1-RC</deployment.version>
-        <persistence.version>0.1-RC</persistence.version>
+        <core.version>1.1.0</core.version>
+        <deployment.version>1.1.0</deployment.version>
+        <persistence.version>1.1.0</persistence.version>
     </properties>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -19,7 +19,7 @@
 	<artifactId>cf-service-broker-mysql</artifactId>
 	<packaging>jar</packaging>
 	<name>ssb-mysql</name>
-	<version>0.1-RC</version>
+	<version>1.1.0</version>
 
 	<dependencies>
 		<!-- MySQL -->
