--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ftp</artifactId>
-				<version>1.0-beta-6</version>
+				<version>2.12</version>
 			</extension>
 		</extensions>
 	</build>
