--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-
-    <properties>
-        <core.version>1.1.0</core.version>
-        <deployment.version>1.1.0</deployment.version>
-        <persistence.version>1.1.0</persistence.version>
-    </properties>
-
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>de.evoila.cf.broker</groupId>
@@ -19,7 +12,6 @@
 	<artifactId>cf-service-broker-mysql</artifactId>
 	<packaging>jar</packaging>
 	<name>ssb-mysql</name>
-	<version>1.1.0</version>
 
 	<dependencies>
 		<!-- MySQL -->
@@ -32,27 +24,48 @@
 		<dependency>
 			<groupId>de.evoila.cf.broker</groupId>
 			<artifactId>core</artifactId>
-			<version>${core.version}</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.evoila.cf.broker</groupId>
 			<artifactId>docker</artifactId>
-			<version>${deployment.version}</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.evoila.cf.broker</groupId>
 			<artifactId>openstack</artifactId>
-			<version>${deployment.version}</version>
+			<version>1.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.evoila.cf.broker</groupId>
 			<artifactId>existing-service</artifactId>
-			<version>${deployment.version}</version>
+			<version>1.1.0</version>
 		</dependency>
+		<!-- <dependency>
+			<groupId>de.evoila.cf.broker</groupId>
+			<artifactId>persistence-redis</artifactId>
+			<version>0.1-RC</version>
+		</dependency> -->
 		<dependency>
 			<groupId>de.evoila.cf.broker</groupId>
 			<artifactId>persistence-mongodb</artifactId>
-			<version>${persistence.version}</version>
+			<version>1.1.0</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ftp</artifactId>
+				<version>2.12</version>
+			</extension>
+		</extensions>
+	</build>
+	<distributionManagement>
+		<repository>
+			<id>ftp-meshstack</id>
+			<url>ftp://maven.meshstack.io</url>
+		</repository>
+	</distributionManagement>
 </project>
